JT-6021 fix spacing and mobile stacking

--- a/app/assets/stylesheets/school_profiles/_profile_module.scss
+++ b/app/assets/stylesheets/school_profiles/_profile_module.scss
@@ -229,6 +229,8 @@
     font-size: 32px;
     margin-right: 5px;
     color: #155aa2;
+    display: table-cell;
+    padding-right: 5px;
   }
 
   .csa-callout {
